Fix random